--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -436,12 +436,91 @@ clamav:
     tag: "1.3.1"
   nameOverride: clamav
   fullnameOverride: clamav
+  clamdConfig: |
+    ###############
+    # General
+    ###############
+
+    DatabaseDirectory /var/lib/clamav
+    TemporaryDirectory /tmp
+    LogTime yes
+    # CUSTOM: Use pid file in tmp
+    PidFile /tmp/clamd.pid
+    LocalSocket /tmp/clamd.sock
+    TCPSocket 3310
+    Foreground yes
+
+    ###############
+    # Results
+    ###############
+
+    DetectPUA yes
+    ExcludePUA NetTool
+    ExcludePUA PWTool
+    HeuristicAlerts yes
+    Bytecode yes
+
+    ###############
+    # Scan
+    ###############
+
+    ScanPE yes
+    DisableCertCheck yes
+    ScanELF yes
+    AlertBrokenExecutables yes
+    ScanOLE2 yes
+    ScanPDF yes
+    ScanSWF yes
+    ScanMail yes
+    PhishingSignatures yes
+    PhishingScanURLs yes
+    ScanHTML yes
+    ScanArchive yes
+
+    ###############
+    # Scan
+    ###############
+
+    MaxScanSize 150M
+    MaxFileSize 30M
+    MaxRecursion 10
+    MaxFiles 15000
+    MaxEmbeddedPE 10M
+    MaxHTMLNormalize 10M
+    MaxHTMLNoTags 2M
+    MaxScriptNormalize 5M
+    MaxZipTypeRcg 1M
+    MaxPartitions 128
+    MaxIconsPE 200
+    PCREMatchLimit 10000
+    PCRERecMatchLimit 10000
+  freshclamConfig: |
+    ###############
+    # General
+    ###############
+
+    DatabaseDirectory /var/lib/clamav/
+    UpdateLogFile /dev/stdout
+    LogTime yes
+    # CUSTOM: Use pid file in tmp
+    PidFile /tmp/freshclam.pid
+    # CUSTOM: Set defined user
+    DatabaseOwner 2000
+
+    ###############
+    # Updates
+    ###############
+
+    DatabaseMirror database.clamav.net
+    ScriptedUpdates yes
+    NotifyClamd /etc/clamav/clamd.conf
+    Bytecode yes
   resources:
     requests:
-      cpu: 100m
+      cpu: 1000m
       memory: 2Gi
     limits:
-      cpu: 100m
+      cpu: 1000m
       memory: 2Gi
 
 serviceAccount:
