--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -8,8 +8,8 @@ global:
     enabled: true
     overwrite: true
     organization: Example gemeente
-    openzaakAutorisatiesApi: https://openzaak.example.nl/autorisaties/api/v1/
-    notificatiesApi: https://opennotificaties.example.nl/api/v1/
+    openzaakAutorisatiesApi: http//openzaak.podiumd.svc.cluster.local/autorisaties/api/v1/
+    notificatiesApi: http://opennotificaties.podiumd.svc.cluster.local/api/v1/
     notificatiesOpenzaakClientId: notificaties
     notificatiesOpenzaakSecret: notificaties-secret
     openzaakNotificatiesClientId: openzaak
