Set clientMaxBodySize for Open Formulieren to 100M in stead of 10M

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -306,6 +306,8 @@ openformulieren:
       requests:
         cpu: 10m
         memory: 16Mi
+    config:
+      clientMaxBodySize: 100M
   redis:
     nameOverride: openformulieren-redis
     fullnameOverride: openformulieren-redis
