feat: added kiss-elastic and corrected wiremind url

--- a/.github/workflows/podium-test-values.yaml
+++ b/.github/workflows/podium-test-values.yaml
@@ -25,8 +25,9 @@ jobs:
       run: | 
         helm repo add bitnami https://charts.bitnami.com/bitnami
         helm repo add dimpact https://Dimpact-Samenwerking.github.io/helm-charts/
+        helm repo add kiss-elastic https://raw.githubusercontent.com/Klantinteractie-Servicesysteem/.github/main/docs/scripts/elastic
         helm repo add maykinmedia https://maykinmedia.github.io/charts/
-        helm repo add wiremind https://wiremind.github.io/charts/
+        helm repo add wiremind https://wiremind.github.io/wiremind-helm-charts
     
     - name: bake deployment
       id: bake
