--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,3 +42,23 @@ jobs:
           skip_existing: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Create GitHub Release
+        run: |
+          VERSION="${{ github.event.inputs.release_version }}"
+          echo "Creating release for version $VERSION"
+
+          # Add release notes and information from websites (URLs)
+          RELEASE_NOTES="## Release Notes for $VERSION
+
+          This release includes several improvements and bug fixes.
+
+          ## Important Links:
+          - [Website 1](https://github.com/open-formulieren/open-forms/blob/master/CHANGELOG.rst#281-2024-10-29)
+          - [Website 2](https://website2.example)
+          - [Docs](https://docs.example)
+
+          Please see the changelog for a detailed list of changes."
+
+          # Create a release using GitHub CLI
+          gh release create "$VERSION" --notes "$RELEASE_NOTES" --target "feature/IN-177_PodiumD_helm_chart_release"
