--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,9 +22,6 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Set Chart Version
-        run: |
-          sed -i "s/^version: .*/version: ${{ github.event.inputs.release_version }}/" charts/podiumd/Chart.yaml
       - name: Add dependency chart repos
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
@@ -45,7 +42,7 @@ jobs:
 
       - name: Create GitHub Release
         run: |
-          VERSION="${{ github.event.inputs.release_version }}"
+          VERSION="${{ github.event.inputs.release_version }}/" charts/podiumd/Chart.yaml
           echo "Creating release for version $VERSION"
 
           # Add release notes and information from websites (URLs)
