--- a/.github/workflows/release-notes.yaml
+++ b/.github/workflows/release-notes.yaml
@@ -1,9 +1,11 @@
 name: Release Notes with Changelog
 
 on:
-  release:
-    types: [created, published]
-
+  workflow_dispatch:
+     inputs:
+      release_version:
+        description: 'Specify the release version number'
+        required: true
 jobs:
   changelog:
     runs-on: ubuntu-latest
