Set appVersion in release.yaml Added Keycloak externalDatabase: host: "" in values.yaml Changed tags: portaal: true in values.yaml Upgraded the version of Open Formulieren to 2.7.9 in values.yaml Upgraded the version of Keycloak to 21.8.0 in Chart.yaml

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1,5 +1,5 @@
 tags:
-  portaal: false
+  portaal: true
   contact: false
   zaak: false
 
@@ -35,6 +35,7 @@ keycloak:
     adminUser: admin
     adminPassword: ChangeMeNow
   externalDatabase:
+    host: ""
     database: ""
     user: ""
   keycloakConfigCli:
@@ -312,7 +313,7 @@ openformulieren:
   persistentVolume:
     volumeAttributeShareName: openformulieren
   image:
-    tag: "2.7.8"
+    tag: "2.7.9"
   resources:
     requests:
       cpu: 100m
