--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -76,7 +76,7 @@ jobs:
           OBJECTEN_IMAGE_TAG_LATEST=$(git show -q HEAD:charts/podiumd/values.yaml | yq -r .objecten.image.tag)
           OBJECTTYPEN_IMAGE_TAG_LATEST=$(git show -q HEAD:charts/podiumd/values.yaml | yq -r .objecttypen.image.tag)
           OPENINWONER_IMAGE_TAG_LATEST=$(git show -q HEAD:charts/podiumd/values.yaml | yq -r .openinwoner.image.tag)
-          echo "OPENFORMS_IMAGE_TAG_LATEST=$OPENFORMS_IMAGE_LATEST" >> $GITHUB_ENV
+          echo "OPENFORMS_IMAGE_TAG_LATEST=$OPENFORMS_IMAGE_TAG_LATEST" >> $GITHUB_ENV
           echo "OPENZAAK_IMAGE_TAG_LATEST=$OPENZAAK_IMAGE_TAG_LATEST" >> $GITHUB_ENV
           echo "OPENKLANT_IMAGE_TAG_LATEST=$OPENKLANT_IMAGE_TAG_LATEST" >> $GITHUB_ENV
           echo "OPENNOTIFICATIES_IMAGE_TAG_LATEST=$OPENNOTIFICATIES_IMAGE_TAG_LATEST" >> $GITHUB_ENV
@@ -88,61 +88,70 @@ jobs:
         id: fetch_changelogs_openforms
         run: |
           WEBSITE1_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENFORMS_IMAGE_TAG }} /,/^${{ env.OPENFORMS_IMAGE_TAG_LATEST }} /')
+          echo "Open Formulieren Changelog: $WEBSITE1_CHANGELOG"
+          echo "changelogs<<EOF" >> $GITHUB_ENV
+          echo "### Open Formulieren" >> $GITHUB_ENV
+          echo "$WEBSITE1_CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Fetch changelogs of Open Zaak 
         id: fetch_changelogs_openzaak
         run: |
           WEBSITE2_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-zaak/main/CHANGELOG.rst | awk '/^${{ env.OPENZAAK_IMAGE_TAG }} /,/^${{ env.OPENZAAK_IMAGE_TAG_LATEST }} /')
+          echo "Open Zaak Changelog: $WEBSITE2_CHANGELOG"
+          echo "changelogs<<EOF" >> $GITHUB_ENV
+          echo "### Open Zaak" >> $GITHUB_ENV
+          echo "$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
           
       - name: Fetch changelog of Open Klant
         id: fetch_changelogs_openklant
         run: |
           WEBSITE3_CHANGELOG=$(curl -s https://raw.githubusercontent.com/maykinmedia/open-klant/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENKLANT_IMAGE_TAG }} /,/^${{ env.OPENKLANT_IMAGE_TAG_LATEST }} /')
-
+          echo "Open Klant Changelog: $WEBSITE3_CHANGELOG"
+          echo "changelogs<<EOF" >> $GITHUB_ENV
+          echo "### Open Klant" >> $GITHUB_ENV
+          echo "$WEBSITE3_CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          
       - name: Fetch changelogs of Open Notificaties
         id: fetch_changelogs_opennotificaties
         run: |
           WEBSITE4_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-zaak/open-notificaties/refs/heads/main/CHANGELOG.rst | awk '/^${{ env.OPENNOTIFICATIES_IMAGE_TAG }} /,/^${{ env.OPENNOTIFICATIES_IMAGE_TAG_LATEST }} /')
-
+          echo "Open Notificaties Changelog: $WEBSITE4_CHANGELOG"
+          echo "changelogs<<EOF" >> $GITHUB_ENV
+          echo "### Open Notificaties" >> $GITHUB_ENV
+          echo "$WEBSITE4_CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          
       - name: Fetch changelogs of Objecten
         id: fetch_changelogs_objecten
         run: |
            WEBSITE5_CHANGELOG=$(curl -s https://raw.githubusercontent.com/maykinmedia/objects-api/refs/heads/stable/2.4.x/CHANGELOG.rst | awk '/^${{ env.OBJECTEN_IMAGE_TAG }} /,/^${{ env.OBJECTEN_IMAGE_TAG_LATEST }} /')
-
+           echo "Open Klant Changelog: $WEBSITE5_CHANGELOG"
+           echo "changelogs<<EOF" >> $GITHUB_ENV
+           echo "### Open Klant" >> $GITHUB_ENV
+           echo "$WEBSITE5_CHANGELOG" >> $GITHUB_ENV
+           echo "EOF" >> $GITHUB_ENV
+           
       - name: Fetch changelogs of Objecttypen
         id: fetch_changelogs_objecttypen
         run: |
           WEBSITE6_CHANGELOG=$(curl -s https://raw.githubusercontent.com/maykinmedia/objecttypes-api/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OBJECTTYPEN_IMAGE_TAG }} /,/^${{ env.OBJECTTYPEN_IMAGE_TAG_LATEST }} /')
-
+          echo "Objecttypen Changelog: $WEBSITE6_CHANGELOG"
+          echo "changelogs<<EOF" >> $GITHUB_ENV
+          echo "### Objecttypen" >> $GITHUB_ENV
+          echo "$WEBSITE6_CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          
       - name: Fetch changelogs of Open Inwoner
         id: fetch_changelogs_openinwoner
         run: |
           WEBSITE7_CHANGELOG=$(curl -s https://api.github.com/repos/maykinmedia/open-inwoner/releases/latest | awk '/^${{ env.OPENINWONER_IMAGE_TAG }} /,/^${{ env.OPENINWONER_IMAGE_TAG_LATEST }} /')
-          
-          
-          # Aggregate changelogs into an environment variable
+          echo "Open Inwoner Changelog: $WEBSITE7_CHANGELOG"
           echo "changelogs<<EOF" >> $GITHUB_ENV
-          echo "### Open Formulieren" >> $GITHUB_ENV
-          echo "$WEBSITE1_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
-          echo "### Open Zaak" >> $GITHUB_ENV
-          echo "$WEBSITE2_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
-          echo "### Open Klant" >> $GITHUB_ENV
-          echo "$WEBSITE3_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
-          echo "### Open Notificaties" >> $GITHUB_ENV
-          echo "$WEBSITE4_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
-          echo "### Objecten" >> $GITHUB_ENV
-          echo "$WEBSITE5_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
-          echo "### Objecttypen" >> $GITHUB_ENV
-          echo "$WEBSITE6_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
           echo "### Open Inwoner" >> $GITHUB_ENV
           echo "$WEBSITE7_CHANGELOG" >> $GITHUB_ENV
-          echo "" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
       - name: Add dependency chart repos
