--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -88,7 +88,7 @@ jobs:
         id: fetch_changelogs_openforms
         run: |
           WEBSITE1_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENFORMS_IMAGE_TAG }} /,/^${{ env.OPENFORMS_IMAGE_TAG_LATEST }} /')
-          echo "changelogs<<EOF" >> $GITHUB_ENV
+          echo "changelogs1<<EOF" >> $GITHUB_ENV
           echo "### Open Formulieren" >> $GITHUB_ENV
           echo "$WEBSITE1_CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -181,6 +181,6 @@ jobs:
             ## Changes in this Release
             ${{ env.commits }}
             ## Changelogs
-            ${{ env.changelogs }}
+            ${{ env.changelogs1 }}
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
