--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -87,7 +87,11 @@ jobs:
       - name: Fetch changelog of Open Formulieren
         id: fetch_changelogs_openforms
         run: |
-          WEBSITE1_CHANGELOG=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENFORMS_IMAGE_TAG_LATEST }} /{flag=1} /^${{ env.OPENFORMS_IMAGE_TAG }} /{print;flag=0} flag')
+          VERSION1_CONTENT=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENFORMS_IMAGE_TAG_LATEST }} /,/^## /') 
+          VERSION2_CONTENT=$(curl -s https://raw.githubusercontent.com/open-formulieren/open-forms/refs/heads/master/CHANGELOG.rst | awk '/^${{ env.OPENFORMS_IMAGE_TAG }} /,/^## /')
+           
+          # Combine the results 
+          WEBSITE1_CHANGELOG="${VERSION1_CONTENT}\n${VERSION2_CONTENT}"  
           echo "openforms<<EOF" >> $GITHUB_ENV
           echo "### Open Formulieren" >> $GITHUB_ENV
           echo "$WEBSITE1_CHANGELOG" >> $GITHUB_ENV
